# USV_code

./: CMakeLists.txt  CMakeLists.txt~  Readme.docx
Missions/: .LastOpenedMOOSLogDirectory  Test_Mission1.moos  Test_Mission1.moos~  alpha.bhv
Missions/Multi-Vehicle_Missions/Alpha/: README.txt  Shoreside.moos  USV.moos  launch.sh
Old Code/controller/: CMakeLists.txt  controller.cpp  controller.moos
Old Code/desiredTrajectory/: CMakeLists.txt  desiredTrajectory.cpp
Old Code/vehicle/: CMakeLists.txt  vehicle.cpp
iTorqeedo/: CMakeLists.txt  CMakeLists.txt~  crc.c  crc.h  iTorqeedo.cpp  iTorqeedo.h  iTorqeedo.moos  iTorqeedo.moos~  iTorqeedo_new.cpp  iTorqeedo_new.cpp~  iTorqeedo_new.h  main_new.cpp  readme.txt  torqtest.moos  torqtest.moos~
imuSpatial/: .CMakeLists.txt.swp  .LastOpenedMOOSLogDirectory  .imuSpatial.moos.swp  CMakeCache.txtbackup  CMakeLists.txt  CMakeLists.txt~  CTestTestfile.cmake  Makefile  cmake_install.cmake  imuSpatial.moos  imuSpatial_MOOSApp.cpp  imuSpatial_MOOSApp.cpp~  imuSpatial_MOOSApp.h  logVideoIMURead.sh  logVideoIMUWrite.sh  main.cpp  main.cpp~  recordVideo  recordVideo.cpp
imuSpatial/imuSpatialSDK/: CMakeLists.txt  CTestTestfile.cmake  Makefile  an_packet_protocol.c  cmake_install.cmake  imuSpatial.cbp  packet_example.c  spatial_packets.h
imuSpatial/imuSpatialSDK/buildbackup/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt  packet_example
imuSpatial/imuSpatialSDK/deleteLater/C/: README
imuSpatial/imuSpatialSDK/deleteLater/C/Dynamic/: .CMakeLists.txt.swp  an_packet_protocol.h  packet_example  packet_example.c  spatial_packets.c
imuSpatial/imuSpatialSDK/deleteLater/C/Static/: an_packet_protocol.c  an_packet_protocol.h  packet_example.c  spatial_packets.c  spatial_packets.h
imuSpatial/imuSpatialSDK/deleteLater/DotNet/: README
imuSpatial/imuSpatialSDK/deleteLater/DotNet/ANPPExample/: ANPacket.cs  ANPacket20.cs  ANPacket28.cs  ANPacketDecoder.cs  Form1.Designer.cs  Form1.cs  Program.cs
imuSpatial/imuSpatialSDK/deleteLater/Java/: README
imuSpatial/imuSpatialSDK/deleteLater/Java/ANPPExample/src/com/advancednavigation/anPackets/: ANPacket.java  ANPacket20.java  ANPacket23.java  ANPacket28.java  ANPacket30.java  ANPacket31.java  ANPacketDecoder.java  TypeConversion.java
imuSpatial/imuSpatialSDK/deleteLater/Java/ANPPExample/src/com/advancednavigation/anppExample/: Main.java
imuSpatial/imuSpatialSDK/deleteLater/Utilities/: README
imuSpatial/imuSpatialSDK/deleteLater/Utilities/ANPP Log Decoder/: anpp_log_decoder.c
imuSpatial/imuSpatialSDK/deleteLater/Utilities/Atmel ANPP/: atmel.c
imuSpatial/imuSpatialSDK/deleteLater/Utilities/Matlab Log Import/: import_sensor_log.m  import_state_log.m
imuSpatial/imuSpatialSDK/deleteLater/Utilities/Serial Port Logger/: packet_example.c
imuSpatial/imuSpatialSDK/deleteLater/Utilities/State Log Parser/: state_log_parser.c
pBacksteppingController/: CMakeLists.txt~  backsteppingcontroller.cpp  backsteppingcontroller.cpp~  backsteppingcontroller.h  backsteppingcontroller.moos  main.cpp
pController/: CMakeLists.txt  CMakeLists.txt~  controller.cpp  controller.cpp~  controller.h  controller.moos  controller.moos~  main.cpp
pJoystick/: CMakeLists.txt  CMakeLists.txt~  Joystick.cpp  Joystick.h  JoystickApp.cpp  JoystickApp.h  JoystickMapper.cpp  JoystickMapper.cpp~  JoystickMapper.h  JoystickMapper_main.cpp  Joystick_main.cpp  joystickmap.moos
pPatternDefinition/: CMakeLists.txt  main.cpp  pPatternDefinition.moos  patterndefinition.cpp  patterndefinition.h
pStateGen/: CMakeLists.txt  CMakeLists.txt~  main.cpp  stategen.cpp  stategen.h  stategen.moos  stategen.moos~
pThrustSim/: CMakeLists.txt  main.cpp  thrustsim.cpp  thrustsim.h  thrustsim.moos
pTimer/: CMakeLists.txt  CMakeLists.txt~  main.cpp  timer.cpp  timer.h  timer.moos  timer.moos~
pTrajectorySim/: CMakeLists.txt  CMakeLists.txt~  main.cpp  timer.moos~  trajectorysim.cpp  trajectorysim.h  trajectorysim.moos  trajectorysim.moos~
pVehicle/: CMakeLists.txt  CMakeLists.txt~  main.cpp  vehicle.cpp  vehicle.h  vehicle.moos
(+24 files in other folders)
